--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <body>
     <% if user_signed_in? %>
       <%= link_to 'Dashboard', admin_dashboard_path %> |
-      <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+      <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to 'Login', new_user_session_path %>
     <% end %>
