--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,28 @@
-<h1>Blog Posts</h1>
-
-<% @posts.each do |post| %>
-  <div class="post">
-    <h2><%= link_to post.title, post_path(post) %></h2>
-    <p><%= truncate(post.content, length: 100) %></p>
-    <%= link_to 'Read More', post_path(post) %>
-  </div>
-<% end %>
+<section class="posts-container">
+  <figure class="categories-bar-container">
+    <div class="title-container">
+      <div class="title-text">Categories</div>
+      <%= image_tag "question-filled.svg", class: "question-filled", alt: "text" %>
+    </div>
+    <div class="category-selectors">
+      <% Category.all.each do |category| %>
+        <% category_class = "category #{category.name.downcase}" %>
+        <%= link_to category_posts_path(category_id: category.id), class: category_class do %>
+          <div class="category-text"><%= category.name %></div>
+        <% end %>
+      <% end %>
+    </div>
+  </figure>
+  <% if @category %>
+    <h2 class="post-by-cat">Posts in <%= @category.name %> Category</h2>
+  <% else %>
+    <h2 class="post-by-cat">All Posts</h2>
+  <% end %>
+  <% @posts.each do |post| %>
+    <div class="post">
+      <h2><%= link_to post.title, post_path(post) %></h2>
+      <p><%= truncate(post.content, length: 100) %></p>
+      <%= link_to 'Read More', post_path(post) %>
+    </div>
+  <% end %>
+</section>
