Add RGB variables for opacity

--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -67,6 +67,9 @@
   justify-content: center;
   align-items: center;
   padding: 0 12px;
+  text-decoration: none;
+  background-color: transparent;
+  transition: background-color 0.3s;
 }
 
 .category-text {
@@ -80,27 +83,35 @@
 }
 
 .category.frontend {
-  background: var(--Electro-Blue, #30C2F6);
+  --category-color: var(--Electro-Blue-RGB);
 }
 
 .category.backend {
-  background: var(--Electro-Yellow, #F6E030);
+  --category-color: var(--Electro-Yellow-RGB);
 }
 
 .category.fullstack {
-  background: var(--Electro-Green, #30F66B);
+  --category-color: var(--Electro-Forest-Green-RGB);
 }
 
 .category.devops {
-  background: var(--Electro-Red, #F63030);
+  --category-color: var(--Electro-Red-RGB);
 }
 
 .category.news {
-  background: var(--Electro-Purple, #8430F6);
+  --category-color: var(--Electro-Purple-RGB);
 }
 
 .category.personal {
-  background: var(--Electro-Orange, #F68C30);
+  --category-color: var(--Electro-Orange-RGB);
+}
+
+.category:hover {
+  background-color: rgba(var(--category-color), 0.5);
+}
+
+.category.active {
+  background-color: rgba(var(--category-color), 1);
 }
 
 .post-by-cat {
