--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,14 @@
   --Electro-Yellow: #F0AA05;
   --Electro-Purple: #6027FF;
   --Login-Gradient: radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
+
+  --Electro-Red-RGB: 244, 32, 83;      /* #F42053 */
+  --Electro-Blue-RGB: 48, 194, 246;    /* #30C2F6 */
+  --Electro-Forest-Green-RGB: 13, 174, 94; /* #0DAE5E */
+  --Electro-Pink-RGB: 194, 37, 224;    /* #C225E0 */
+  --Electro-Yellow-RGB: 240, 170, 5;   /* #F0AA05 */
+  --Electro-Purple-RGB: 96, 39, 255;   /* #6027FF */
+  --Electro-Orange-RGB: 246, 140, 48;  /* #F68C30 */
 }
 
 body {
@@ -36,4 +44,6 @@ body {
   min-height: 100vh;
   margin: 0;
   box-sizing: border-box;
+  background: var(--Black-Gradient, linear-gradient(180deg, #000 0%, #121212 100%));
+  color: var(--White, #FFF);
 }
