--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,16 +34,32 @@
   --Electro-Orange-RGB: 246, 140, 48;  /* #F68C30 */
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100vh;
+  box-sizing: border-box;
+  color: var(--White, #FFF);
+}
+
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 32px;
+  justify-content: flex-start;
+  position: relative;
+  overflow: auto;
+  background: none;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  min-height: 100vh;
-  margin: 0;
-  box-sizing: border-box;
+  height: 120vh;
   background: var(--Black-Gradient, linear-gradient(180deg, #000 0%, #121212 100%));
-  color: var(--White, #FFF);
+  z-index: -1;
 }
