--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
         <% is_active = @category && @category.id == category.id %>
         <% category_class = "category #{category.name.downcase}" %>
         <% category_class += ' active' if is_active %>
-        <% link_path = is_active ? posts_path : category_posts_path(category_id: category.id) %>
+        <% link_path = is_active ? posts_path : category_posts_path(category: category.slug) %>
         <%= link_to link_path, class: category_class do %>
           <div class="category-text"><%= category.name %></div>
         <% end %>
