--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,6 +45,7 @@ html, body {
 
 body {
   display: flex;
+  padding: 32px 32px 10px 32px;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
