--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,4 @@
-<h1><%= @post.title %></h1>
-<div><%= markdown(@post.content) %></div>
+<section class="posts-container">
+  <h1><%= @post.title %></h1>
+  <%= markdown(@post.content) %>
+</section>
