--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,7 @@
       <%= render_category_links(@category) %>
     </div>
   </figure>
+  <h1>TESTING THE CD!!!</h1>
   <%= posts_header(@category) %>
   <% if @posts.present? %>
     <% @posts.each do |post| %>
