--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  *= require posts
+ *= require add-new-post
  */
 :root {
   --Gray: #363636;
@@ -24,6 +25,7 @@
   --Electro-Yellow: #F0AA05;
   --Electro-Purple: #6027FF;
   --Login-Gradient: radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
+  --Green-Glow: rgba(13, 174, 94, 0.35);
 
   --Electro-Red-RGB: 244, 32, 83;      /* #F42053 */
   --Electro-Blue-RGB: 48, 194, 246;    /* #30C2F6 */
@@ -38,6 +40,7 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
+  height: 100%;
   min-height: 100vh;
   box-sizing: border-box;
   color: var(--White, #FFF);
@@ -78,4 +81,21 @@ body::before {
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
