Begin work on Preview functionality

--- a/app/assets/stylesheets/add-new-post.css
+++ b/app/assets/stylesheets/add-new-post.css
@@ -161,6 +161,12 @@
 }
 
 .ANP-button-preview {
+  pointer-events: none;
+  opacity: 0.5;
+  cursor: default;
+}
+
+.ANP-button-preview {
   background: rgba(var(--Electro-Yellow-RGB), 1); /* Full opacity yellow */
   transition: 500ms;
 }
