Fix the file ext for Sprockets::Rails::Helper::AssetNotFound

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,7 @@
       aria-expanded="false"
     >
       Menu
-      <%= image_tag "menu-icon", alt: "Menu", class: "menu-icon" %>
+      <%= image_tag "menu-icon.svg", alt: "Menu", class: "menu-icon" %>
     </button>
     <div
       role="menu"
