--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,9 @@
  *= require_self
  *= require posts
  *= require add-new-post
+ *= require navbar
+ *= require post-management
+ *= require pagy
  */
 :root {
   --Gray: #363636;
@@ -25,7 +28,7 @@
   --Electro-Yellow: #F0AA05;
   --Electro-Purple: #6027FF;
   --Login-Gradient: radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
-  --Green-Glow: rgba(13, 174, 94, 0.35);
+  --Green-Glow: rgba(13, 174, 94, 0.25);
 
   --Electro-Red-RGB: 244, 32, 83;      /* #F42053 */
   --Electro-Blue-RGB: 48, 194, 246;    /* #30C2F6 */
@@ -62,7 +65,7 @@ body::before {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   background: var(--Black-Gradient, linear-gradient(180deg, #000 0%, #121212 100%));
   z-index: -1;
