--- a/app/assets/stylesheets/add-new-post.css
+++ b/app/assets/stylesheets/add-new-post.css
@@ -1,5 +1,5 @@
 /* Container */
-.ANP-container {
+.add-post-form__container {
   display: flex;
   width: 100%;
   height: 100%;
@@ -12,7 +12,7 @@
 }
 
 /* Left Side: Content */
-.ANP-content {
+.add-post-form__content {
   width: 720px;
   padding: 10px;
   background: #000;
@@ -21,7 +21,7 @@
   flex-grow: 1;
 }
 
-.ANP-content-input {
+.add-post-form__content-input {
   flex-grow: 1;
   width: 100%;
   background: none;
@@ -33,7 +33,7 @@
 }
 
 /* Right Side: Attributes */
-.ANP-attributes {
+.add-post-form__attributes {
   flex: 1 1 0;
   padding: 10px 20px;
   background: linear-gradient(360deg, #000000 0%, #121212 100%);
@@ -45,14 +45,14 @@
 }
 
 /* Heading */
-.ANP-heading {
+.add-post-form__heading {
   width: 100%;
   padding: 20px 0;
   display: flex;
   justify-content: center;
 }
 
-.ANP-heading h2 {
+.add-post-form__heading h2 {
   color: #FFFFFF;
   font-size: 24px;
   font-family: 'Unbounded', sans-serif;
@@ -61,21 +61,21 @@
 }
 
 /* Fields */
-.ANP-field {
+.add-post-form__field {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 6px;
 }
 
-.ANP-label {
+.add-post-form__label {
   color: #FFFFFF;
   font-size: 14px;
   font-family: 'Unbounded', sans-serif;
   font-weight: 600;
 }
 
-.ANP-input {
+.add-post-form__input {
   width: 100%;
   height: 42px;
   box-sizing: border-box;
@@ -90,14 +90,14 @@
   outline: none;
 }
 
-.ANP-textarea {
+.add-post-form__textarea {
   height: auto;
   padding: 10px;
   min-height: 100px;
 }
 
 /* Checkbox Group */
-.ANP-checkbox-group {
+.add-post-form__checkbox-group {
   width: 100%;
   box-sizing: border-box;
   padding: 10px;
@@ -109,13 +109,13 @@
   gap: 16px;
 }
 
-.ANP-checkbox-item {
+.add-post-form__checkbox-item {
   display: flex;
   align-items: center;
   gap: 6px;
 }
 
-.ANP-checkbox {
+.add-post-form__checkbox {
   width: 10px;
   height: 10px;
   border: 1px solid #363636;
@@ -124,11 +124,11 @@
   cursor: pointer;
 }
 
-.ANP-checkbox:checked {
+.add-post-form__checkbox:checked {
   background-color: #0DAE5E;
 }
 
-.ANP-checkbox-label {
+.add-post-form__checkbox-label {
   color: #FFFFFF;
   font-size: 10px;
   font-family: 'B612 Mono', monospace;
@@ -136,7 +136,7 @@
 }
 
 /* Buttons */
-.ANP-buttons {
+.add-post-form__buttons {
   width: 100%;
   padding: 20px 0;
   display: flex;
@@ -144,7 +144,7 @@
   gap: 16px;
 }
 
-.ANP-button {
+.add-post-form__button {
   flex: 1;
   height: 42px;
   padding: 4px 10px;
@@ -160,51 +160,51 @@
   cursor: pointer;
 }
 
-.ANP-button-preview {
+.add-post-form__button-preview {
   pointer-events: none;
   opacity: 0.5;
   cursor: default;
 }
 
-.ANP-button-preview {
+.add-post-form__button-preview {
   background: rgba(var(--Electro-Yellow-RGB), 1); /* Full opacity yellow */
   transition: 500ms;
 }
 
-.ANP-button-preview:hover {
+.add-post-form__button-preview:hover {
   background: rgba(var(--Electro-Yellow-RGB), 0.8); /* Reduced opacity yellow */
 }
 
-.ANP-button-save {
+.add-post-form__button-save {
   background: rgba(var(--Electro-Forest-Green-RGB), 1); /* Full opacity green */
   transition: 500ms;
 }
 
-.ANP-button-save:hover {
+.add-post-form__button-save:hover {
   background: rgba(var(--Electro-Forest-Green-RGB), 0.8); /* Reduced opacity green */
 }
 
 
-.ANP-input:focus, 
-.ANP-textarea:focus {
+.add-post-form__input:focus, 
+.add-post-form__textarea:focus {
   border-color: var(--Electro-Forest-Green);
   box-shadow: 0px 0px 10px var(--Green-Glow);
   outline: none;
 }
 
-.ANP-input.ANP-textarea:focus {
+.add-post-form__input.add-post-form__textarea:focus {
   border-color: var(--Electro-Forest-Green);
   box-shadow: 0px 0px 10px var(--Green-Glow);
 }
 
-.ANP-checkbox:focus {
+.add-post-form__checkbox:focus {
   outline: 2px solid var(--Electro-Forest-Green);
   outline-style: double;
 }
 
-.ANP-input:-webkit-autofill,
-.ANP-input:-webkit-autofill:hover,
-.ANP-input:-webkit-autofill:focus {
+.add-post-form__input:-webkit-autofill,
+.add-post-form__input:-webkit-autofill:hover,
+.add-post-form__input:-webkit-autofill:focus {
   background-color: rgba(var(--Electro-Forest-Green-RGB), 0.1) !important; /* Transparent green */
   box-shadow: 0 0 0px 1000px #000 inset !important; /* Match your form background */
   border-color: var(--Electro-Forest-Green) !important; /* Consistent border color */
