--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -6,46 +6,46 @@
     <%= markdown(@post.content) %>
   </section>
 <% end %>
-<%= form_with(model: [:admin, @post], local: true, data: { turbo: false }, class: "ANP-container") do |form| %>
-  <div class="ANP-content">
-    <%= form.text_area :content, class: "ANP-content-input" %>
+<%= form_with(model: [:admin, @post], local: true, data: { turbo: false }, class: "add-post-form__container") do |form| %>
+  <div class="add-post-form__content">
+    <%= form.text_area :content, class: "add-post-form__content-input" %>
   </div>
-  <div class="ANP-attributes">
-    <div class="ANP-heading">
+  <div class="add-post-form__attributes">
+    <div class="add-post-form__heading">
       <h2><%= yield :form_title %></h2>
     </div>
-    <div class="ANP-field">
-      <%= form.label :title, class: "ANP-label" %>
-      <%= form.text_field :title, class: "ANP-input" %>
+    <div class="add-post-form__field">
+      <%= form.label :title, class: "add-post-form__label" %>
+      <%= form.text_field :title, class: "add-post-form__input" %>
     </div>
-    <div class="ANP-field">
-      <%= form.label :category_ids, "Categories", class: "ANP-label" %>
-      <div class="ANP-checkbox-group">
+    <div class="add-post-form__field">
+      <%= form.label :category_ids, "Categories", class: "add-post-form__label" %>
+      <div class="add-post-form__checkbox-group">
         <% @categories.each do |category| %>
-          <div class="ANP-checkbox-item">
-            <%= check_box_tag "post[category_ids][]", category.id, @post.category_ids.include?(category.id), id: "category_#{category.id}", class: "ANP-checkbox" %>
-            <%= label_tag "category_#{category.id}", category.name, class: "ANP-checkbox-label" %>
+          <div class="add-post-form__checkbox-item">
+            <%= check_box_tag "post[category_ids][]", category.id, @post.category_ids.include?(category.id), id: "category_#{category.id}", class: "add-post-form__checkbox" %>
+            <%= label_tag "category_#{category.id}", category.name, class: "add-post-form__checkbox-label" %>
           </div>
         <% end %>
       </div>
     </div>
-    <div class="ANP-field">
-      <%= form.label :tag_list, "Tags", class: "ANP-label" %>
-      <%= form.text_area :tag_list, class: "ANP-input ANP-textarea", placeholder: "Enter tags separated by commas" %>
+    <div class="add-post-form__field">
+      <%= form.label :tag_list, "Tags", class: "add-post-form__label" %>
+      <%= form.text_area :tag_list, class: "add-post-form__input add-post-form__textarea", placeholder: "Enter tags separated by commas" %>
     </div>
-    <div class="ANP-field">
-      <%= form.label :status, class: "ANP-label" %>
-      <%= form.select :status, options_for_select([["Draft", "draft"], ["Published", "published"]], @post.status), {}, class: "ANP-input" %>
+    <div class="add-post-form__field">
+      <%= form.label :status, class: "add-post-form__label" %>
+      <%= form.select :status, options_for_select([["Draft", "draft"], ["Published", "published"]], @post.status), {}, class: "add-post-form__input" %>
     </div>
-    <div class="ANP-buttons">
+    <div class="add-post-form__buttons">
       <%= form.submit "Preview (Under Construction)",
         formaction: @post.new_record? ? preview_admin_posts_path : preview_admin_post_path(@post),
         formmethod: :post,
-        class: "ANP-button ANP-button-preview" %>
+        class: "add-post-form__button add-post-form__button-preview" %>
       <% if @post.new_record? %>
-        <%= form.submit "Save Post", class: "ANP-button ANP-button-save" %>
+        <%= form.submit "Save Post", class: "add-post-form__button add-post-form__button-save" %>
       <% else %>
-        <%= form.submit "Update Post", class: "ANP-button ANP-button-save" %>
+        <%= form.submit "Update Post", class: "add-post-form__button add-post-form__button-save" %>
       <% end %>
     </div>
   </div>
