--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -25,7 +25,7 @@
   color: #FFF;
   border-radius: 24px;
   border: 1px solid var(--Gray, #ccc); /* Added fallback */
-  background: var(--Login-Gradient, radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%));
+  background: var(--Black-Gradient-Reverse, linear-gradient(0deg, #000 0%, #121212 100%));
   margin-bottom: 8px;
   cursor: pointer;
   font-size: 16px;
