--- a/app/assets/stylesheets/post-management.css
+++ b/app/assets/stylesheets/post-management.css
@@ -19,7 +19,11 @@
 }
 
 .admin-posts__add-button {
-  padding: 10px 28px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 10px 20px;
   background: var(--Black-Gradient-Reverse, linear-gradient(0deg, #000 0%, #121212 100%));
   border: 1px solid var(--Gray);
   border-radius: 6px;
@@ -28,10 +32,10 @@
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   text-decoration: none;
-  display: inline-block;
-  text-align: center;
   cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: background 0.3s ease, border 0.3s ease-out;
+  text-align: center;
 }
 
 .admin-posts__add-button:hover,
@@ -40,6 +44,21 @@
   background: rgba(13, 174, 94, 0.8);
   outline: 2px solid rgba(13, 174, 94, 0.5); 
   outline-offset: 2px;
+}
+
+.admin-posts__add-button-icon {
+  width: 1.25rem;
+  height: 1.25rem;
+  fill: currentColor;
+  transition: transform 0.3s ease; /* Smooth animation for rotation */
+}
+
+.admin-posts__add-button:hover .admin-posts__add-button-icon {
+  transform: rotate(90deg); /* Rotate 45 degrees on hover */
+}
+
+.admin-posts__add-button-icon {
+  transform: rotate(0deg); /* Default position */
 }
 
 .admin-posts__table {
