--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
       data-action="click->dropdown#toggle click@window->dropdown#hide"
       aria-haspopup="true"
       aria-expanded="false"
-    >
+      >
       Menu
       <%= image_tag "menu-icon.svg", alt: "Menu", class: "menu-icon" %>
     </button>
@@ -25,6 +25,18 @@
       aria-labelledby="navbar_menu_button"
     >
       <%= link_to "Home", root_path, class: "dropdown-link" %>
+      <button 
+        type="button" 
+        class="dropdown-link-button" 
+        onclick="document.getElementById('about-dialog').showModal()">
+        About
+      </button>
+      <button 
+        type="button" 
+        class="dropdown-link-button" 
+        onclick="document.getElementById('contact-dialog').showModal()">
+        Contact
+      </button>
       <% if user_signed_in? %>
         <%= link_to "Dashboard", admin_dashboard_path, class: "dropdown-link" %>
         <%= link_to "Posts", admin_posts_path, class: "dropdown-link" %>
