--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -142,6 +142,12 @@
 
 .about-dialog__link {
   color: white;
+  text-decoration: none;
+  transition: color 0.4s ease, text-decoration 0.5s ease-out;
+}
+
+.about-dialog__link:hover {
+  color: var(--Electro-Forest-Green);
   text-decoration: underline;
 }
 
