--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -23,8 +23,8 @@
         <div class="about-dialog__bio">
           <p>
             Hi, my name is Davis and I'm a Software Engineer with a background in Audio Engineering. When I am not programming I love listening to, collecting, and making music.
-            Check out my <a href="#" class="about-dialog__link">SoundCloud</a> to see what I've been working on. I also enjoy reading (especially sci-fi space operas), playing video games,
-            <a href="#" class="about-dialog__link">DJing</a>, and spending time with my partner Mary and our dog.
+            Check out my <a href='https://soundcloud.com/berrik' target='_blank' rel='noopener noreferrer' class="about-dialog__link">SoundCloud</a> to see what I've been working on. I also enjoy reading (especially sci-fi space operas), playing video games,
+            <a href='https://www.mixcloud.com/da-5k/' target='_blank' rel='noopener noreferrer' class="about-dialog__link">DJing</a>, and spending time with my partner Mary and our dog.
           </p>
         </div>
         <div class="about-dialog__recent">
